--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -13,7 +13,7 @@
 # website title
 title = ""
 # Hostname (and path) to the root
-baseURL = "http://localhost:1313"
+baseURL = "https://lvwinbor.github.io"
 # theme list
 theme = ["FixIt"] # enable in your site config file
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
