--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/FixIt"]
 	path = themes/FixIt
 	url = https://github.com/lvwinbor/FixIt.git
+[submodule "themes/cmpt-flyfish"]
+	path = themes/cmpt-flyfish
+	url = git@github.com:hugo-fixit/cmpt-flyfish.git
