--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -15,7 +15,7 @@ title = ""
 # Hostname (and path) to the root
 baseURL = "https://lvwinbor.github.io"
 # theme list
-theme = ["FixIt"] # enable in your site config file
+theme = ["FixIt", "cmpt-flyfish"] # enable in your site config file
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
 defaultContentLanguage = "zh-cn"
 # language code ["en", "zh-CN", "fr", "pl", ...]
