--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "themes/FixIt"]
 	path = themes/FixIt
-	url = https://github.com/lvwinbor/FixIt.git
+	url = https://github.com/hugo-fixit/FixIt.git
 [submodule "themes/cmpt-flyfish"]
 	path = themes/cmpt-flyfish
 	url = git@github.com:hugo-fixit/cmpt-flyfish.git
