--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -671,12 +671,12 @@
       # whether to keep the static table of the contents in front of the post
       keepStatic = false
       # whether to make the table of the contents in the sidebar automatically collapsed
-      auto = true
+      auto = false
       # FixIt 0.2.13 | NEW position of TOC ["left", "right"]
       position = "right"
       # FixIt 0.3.12 | NEW supersede `markup.tableOfContents` settings
-      ordered = false
-      startLevel = 2
+      ordered = false 
+      startLevel = 1
       endLevel = 6
     # FixIt 0.2.13 | NEW Display a message at the beginning of an article to warn the reader that its content might be expired
     [page.expirationReminder]
