--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -11,7 +11,7 @@
 # -------------------------------------------------------------------------------------
 
 # website title
-title = ""
+title = "lvwinbor的博客"
 # Hostname (and path) to the root
 baseURL = "https://lvwinbor.github.io"
 # theme list
