--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/cmpt-flyfish"]
 	path = themes/cmpt-flyfish
 	url = git@github.com:hugo-fixit/cmpt-flyfish.git
+[submodule "themes/FixIt"]
+	path = themes/FixIt
+	url = git@github.com:hugo-fixit/FixIt.git
