--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -31,6 +31,6 @@ copyright = ""
 # whether to use robots.txt
 enableRobotsTXT = true
 # whether to use git commit log
-enableGitInfo = false
+enableGitInfo = true
 # whether to use emoji code
 enableEmoji = true
