--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -11,9 +11,9 @@
 # -------------------------------------------------------------------------------------
 
 # website title
-title = "lvwinbor的博客"
+title = "Lv Wenbo的博客"
 # Hostname (and path) to the root
-baseURL = "https://lvwinbor.github.io"
+baseURL = "https://WbLv66.github.io"
 # theme list
 theme = ["FixIt", "cmpt-flyfish"] # enable in your site config file
 # determines default content language ["en", "zh-cn", "fr", "pl", ...]
