--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -40,7 +40,7 @@
 
   # Author Configuration
   [author]
-    name = "lvwinbor"
+    name = "Lv Wenbo"
     email = "wb.lv@qq.com"
     link = ""
     avatar = "Accelerator.png"
@@ -130,7 +130,7 @@
       # URL of the LOGO
       logo = ""
       # title name
-      name = " lvwinbor的博客"
+      name = " Lv Wenbo的博客"
       # you can add extra information before the name (HTML format is supported), such as icons
       pre = ""
       # you can add extra information after the name (HTML format is supported), such as icons
