--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -29,7 +29,7 @@ jobs:
           uses: peaceiris/actions-gh-pages@v4
           with:
               PERSONAL_TOKEN: ${{ secrets.TOKEN}}
-              EXTERNAL_REPOSITORY: WbLv66/WbLv66.github.io.github.io
+              EXTERNAL_REPOSITORY: WbLv66/WbLv66.github.io
               PUBLISH_BRANCH: main
               PUBLISH_DIR: ./public
               commit_message: auto deploy
